api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-rental-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /bookings
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 8080
      - path: /cars
        pathType: Prefix
        backend:
          service:
            name: car-service
            port:
              number: 8081
      - path: /notifications
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 8082
      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 8083
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8084
